# Yao-Bi-Agent

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  contracts.py  main.py  provenance.py  server.py
colab/: README.md  YaoBi_Skill_Colab.ipynb  launch_yaobi_colab.py
config/: case_schema.json  hermes_agent.yaml  hermes_tools.json  model_config.yaml  next_gen_agent_blueprint.yaml  safety_config.yaml
docs/: caseguide_protocol.md  clinical_invariant_review_response_2026-07.md  clinical_safety_case.md  code_review_response_2026-07.md  entry_consistency_review_response_2026-07.md  feature_review_2026-07.md  final_functionality_audit.md  harness_governance_review_response_2026-07.md  harness_review_response_2026-07.md  implementation_assessment.md  next_generation_cdss_agent_recommendations.md  ortho_cdss_review_response_2026-07.md  protocol.md  research_grounding.md  safety_policy.md  ui_protocol.md
evaluation/: expert_review_template.md  golden_cases.yaml
frontend/: README.md  app.js  index.html  mined_rules.js  styles.css
rules/: 01_tags.yaml  02_syndrome_rules.yaml  03_formula_rules.yaml  04_module_rules.yaml  05_dose_rules.yaml  06_conflict_rules.yaml  07_safety_rules.yaml  08_followup_rules.yaml  09_question_rules.yaml  10_case_guide_questions.yaml  11_mined_rule_candidates.yaml
tests/: conftest.py  test_agents.py  test_autonomous_agent.py  test_benchmark.py  test_caseguide.py  test_cdss_governance.py  test_clinical_invariants.py  test_colab_launcher.py  test_contracts.py  test_conversation.py  test_entry_consistency.py  test_frontend_static.py  (+21 more)
(+85 files in other folders)
