[project]
name = "yaobi-skill-agent"
version = "0.7.0"
description = "Lightweight Skill + Hermes-style agent for Shen Qinrong YaoBi research rules"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "openpyxl>=3.1"]
llm = ["transformers>=4.51", "torch>=2.2", "accelerate>=0.34", "bitsandbytes>=0.43"]
mining = ["openpyxl>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
